--- a/styles.css
+++ b/styles.css
@@ -200,38 +200,30 @@ p{
     margin: 20px auto;
 }
 
-@media only screen and (max-width:850px){
-    .menu-btn{
-        display: block;
-        width: 30px;
-        height: 30px;
+@media only screen and (max-width:850px){ 
+    .nav-links{      
+        flex-direction: column;
+        width: 100%;
+        display: flex;
+        position: absolute;
+        top: 50px;
+        left: 0;
+        background-color: none;
+        color: #000000;
     }
-    .navbar{
-        padding: 0;
+    .logo{
+        color: #000000;
+    }
+    .nav-links li{
+        text-align: center;
+        padding: 10px 0;
+        height: 8vh;
+    }
+    .navbar .nav-links .ctn{
+        background-color: none;
     }
     .header-content a{
         display: flex;
-    }
-    .logo{
-        position: absolute;
-        font-size: medium;
-        top: 30px;
-        left: 30px;
-    }
-    .nav-links{
-        flex-direction: column;
-        width: 100%;
-        height: 100vh;
-        justify-content: center;
-        background-color: #484872;
-        margin-top: -900px;
-        transition: all 0.5s ease;
-    }
-    .mobile-menu{
-        margin-top: 0px;
-    }
-    .nav-links li{
-        margin: 30px auto;
     }
     .fila{
         flex-direction: column;
@@ -242,7 +234,6 @@ p{
     .col img{
         max-width: 90%;
     }
-
     .explore-content{
         width: 100%;
     }
